<resources>
    <string name="app_name">ScoreAppPM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_please_give_the_command_names_n_and_set_the_timer">Hi! Please give the command names \n and set the timer</string>
    <string name="team_1">Team 1:</string>
    <string name="teamname1">teamName1</string>
    <string name="team_2">Team 2:</string>
    <string name="teamname2">teamName2</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="open_history"><u>Open history</u></string>
    <string name="time">Time:</string>
    <string name="_0">0</string>
    <string name="cancel">cancel</string>
    <string name="this_is_image">this is image</string>
    <string name="winners_history">Winners history</string>
    <string name="clear_history">Clear history</string>
    <string name="to_main_page">To main page</string>

</resources>