<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.teams.TeamsFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/hi_please_give_the_command_names_n_and_set_the_timer"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_team1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/team_1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_teamName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:hint="@string/teamname1"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_team2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/team_2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_teamName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:hint="@string/teamname2"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="6"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:hint="@string/_00_00_00"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/start" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/open_history"
            android:textColor="@color/secondaryTextColor" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>