<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.scorecount.ScoreCountFragment">

    <TextView
        android:id="@+id/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_mono_medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_mono_medium"
        android:gravity="center"
        android:text="@string/time" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_00_00_00"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/team_1" />

            <TextView
                android:id="@+id/tv_team1Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/teamname1"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ib_addScoreTeam1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/transparent"
                android:elevation="8dp"
                android:contentDescription="@string/this_is_image"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24" />

            <TextView
                android:id="@+id/tv_team1Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="@string/_0"
                android:textSize="64sp" />

            <ImageButton
                android:id="@+id/ib_removeScoreTeam1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/transparent"
                android:elevation="8dp"
                android:padding="16dp"
                android:contentDescription="@string/this_is_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/team_2" />

            <TextView
                android:id="@+id/tv_team2Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/teamname2"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ib_addScoreTeam2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/this_is_image"
                android:background="@android:color/transparent"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24" />

            <TextView
                android:id="@+id/tv_team2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="@string/_0"
                android:textSize="64sp" />

            <ImageButton
                android:id="@+id/ib_removeScoreTeam2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/transparent"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:contentDescription="@string/this_is_image" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:text="@string/cancel" />

</LinearLayout>